docs(website): Updated the Other driver documentations (Second pass)